added rest of repos and connected them to managers and api
